--- a/css/styles.css
+++ b/css/styles.css
@@ -618,6 +618,7 @@ background-color: var(--accent-hover-color);
 .portfolio-link-img
 {
   display: block;
+  position: relative;
 }
 .portfolio-link-img:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -630,7 +631,35 @@ background-color: var(--accent-hover-color);
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+.portfolio-overlay {
+  position: relative;
+  overflow: hidden;
+}
 
+.overlay {
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  color: var(--white-text-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 64px 24px;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms linear;
+}
+.portfolio-link-img:hover .overlay,
+.portfolio-link-img:focus .overlay {
+  transform: translate(0%);
+
+}
 .portfolio-list-title {
   font-weight: bold;
   font-size: 18px;
