--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
 html {
   box-sizing: border-box;
 }
+
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
+
 :root {
   --main-text-color: #212121;
   --text-color: #757575;
@@ -20,11 +22,13 @@ html {
   --social-icon-color: #afb1b8;
   --social-bg-lighte-color: #fff;
 }
+
 body {
   margin: 0;
   color: var(--main-text-color);
   font-family: Roboto, sans-serif;
 }
+
 h1,
 h2,
 h3,
@@ -32,12 +36,14 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+
 ul,
 ol {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
 }
+
 img {
   display: block;
   max-width: 100%;
@@ -47,9 +53,11 @@ img {
 .list {
   list-style: none;
 }
+
 .link {
   text-decoration: none;
 }
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -57,14 +65,17 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
 /* section header */
 .header {
   border-bottom: 1px solid #ececec;
 }
+
 .header-container {
   display: flex;
   align-items: center;
@@ -73,14 +84,17 @@ img {
 .navigation {
   display: flex;
 }
+
 .navigation-list {
   display: flex;
   align-items: center;
 }
-.navigation-link{
+
+.navigation-link {
   padding-top: 32px;
   padding-bottom: 32px;
 }
+
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -92,57 +106,88 @@ img {
   padding-top: 24px;
   padding-bottom: 24px;
 }
+
 .logo-accent {
   color: var(--accent-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .logo-accent:hover {
   color: var(--accent-hover-color);
 }
+
 .logo-black-color {
   color: #000000;
 }
+
 .navigation-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.4;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .active {
   color: var(--accent-text-color);
+
 }
+
 .navigation-link:hover {
   color: var(--accent-text-color);
 }
+
 .navigation-link:focus {
   color: var(--accent-text-color);
 }
+
 .navigation-list-item:not(:last-child) {
   margin-right: 50px;
 }
+
 .navigation-list-item {
   display: block;
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
 }
+
+.navigation-link.active::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-hover-color);
+  border-radius: 2px;
+  transform: translateY(1px);
+}
+
 .contacts-list {
   display: flex;
   align-items: center;
   margin-left: auto;
 }
+
 .contact-mail {
   display: flex;
   align-items: center;
   margin-right: 50px;
 
 }
-.contact-telephon{
+
+.contact-telephon {
   display: flex;
   display: block;
   box-sizing: border-box;
   align-items: center;
 }
-.contact-telephon-link
-{
+
+.contact-telephon-link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -153,29 +198,34 @@ img {
   color: var(--text-color);
   padding-top: 32px;
   padding-bottom: 32px;
-  }
-  .contact-mail-link {
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.4;
-    letter-spacing: 0.02em;
-    color: var(--text-color);
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-mail-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.4;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .mail-icon {
-  
+
   margin-right: 10px;
   fill: currentColor;
 }
+
 .contact-mail-link:hover,
 :focus {
   color: var(--accent-text-color);
 }
+
 .contact-telephon-link:hover,
 :focus {
   color: var(--accent-text-color);
@@ -188,14 +238,13 @@ img {
   margin-left: auto;
   margin-right: auto;
   padding: 200px 0;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)),
     url("../images/Img5.jpg");
   background-size: cover;
   background-color: #c4c4c4;
 }
+
 .main-title {
   font-weight: 900;
   font-size: 44px;
@@ -207,6 +256,7 @@ img {
   min-width: 696px;
   margin-bottom: 30px;
 }
+
 .modal-button {
   min-width: 200px;
   padding: 10px 32px;
@@ -224,7 +274,9 @@ img {
   display: flex;
   margin-left: auto;
   margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-button:hover {
   background-color: var(--accent-hover-color);
 }
@@ -240,8 +292,9 @@ img {
   color: var(--main-text-color);
   margin-bottom: 10px;
 }
-.description-image{
- 
+
+.description-image {
+
   display: block;
   display: flex;
   justify-content: center;
@@ -259,16 +312,20 @@ img {
   letter-spacing: 0.03em;
   color: var(--text-color);
 }
+
 .description-list {
   display: flex;
 }
+
 .description-list-item {
- 
+
   flex-basis: calc((100% - 120px) / 4);
 }
+
 .description-list-item:last-child {
   margin-right: 0px;
 }
+
 .description-list-item:not(:last-child) {
   margin-right: 30px;
 }
@@ -278,6 +335,7 @@ img {
 .about {
   padding-top: 0;
 }
+
 .about-title,
 .team-title,
 .our-clients-title {
@@ -293,10 +351,40 @@ img {
 .about-list {
   display: flex;
   justify-content: space-between;
+  cursor: pointer;
+}
+
+.about-img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+
 }
 
 .about-list-photo:not(:last-child) {
   margin-right: 30px;
+}
+
+.about-list-photo {
+  position: relative;
+}
+
+.about-overlay {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-text-color);
+  background: rgba(47, 48, 58, 0.8);
 }
 
 /* team members */
@@ -307,6 +395,7 @@ img {
   margin-top: -30px;
   padding: 0;
 }
+
 .team-member-photo {
   flex-basis: calc((100% - 120px) / 4);
   margin-left: 30px;
@@ -320,6 +409,7 @@ img {
 .team-teatle {
   margin-bottom: 50px;
 }
+
 .team-member-name {
   font-weight: 500;
   font-size: 16px;
@@ -329,6 +419,7 @@ img {
   color: var(--main-text-color);
   margin-bottom: 10px;
 }
+
 .team-member-profesion {
   font-size: 16px;
   line-height: 1.2;
@@ -341,6 +432,7 @@ img {
 .team-under-photo-content {
   padding: 30px 32px;
 }
+
 .team {
   background-color: var(--secondary-bg-color);
 }
@@ -351,6 +443,7 @@ img {
   margin: 0 auto;
   justify-content: space-between;
 }
+
 .social-icon-link {
   display: flex;
   justify-content: center;
@@ -360,10 +453,13 @@ img {
   background-color: var(--white-text-color);
   border-radius: 50%;
   color: var(--social-icon-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .social-icon {
   fill: currentColor;
 }
+
 .social-icon-link:hover,
 .social-icon-link:focus {
   color: var(--white-text-color);
@@ -375,6 +471,7 @@ img {
   display: flex;
   justify-content: space-between;
 }
+
 .client-icon-link {
   display: flex;
   justify-content: center;
@@ -384,29 +481,33 @@ img {
   align-items: center;
   color: var(--social-icon-color);
   border: 1px solid var(--social-icon-color);
-  border-radius: 4px; 
+  border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .client-icon {
   fill: currentColor;
 }
+
 .client-icon-link:hover,
-.client-icon-link:focus{
+.client-icon-link:focus {
   color: var(--accent-hover-color);
-border: 1px solid var(--accent-hover-color);
+  border: 1px solid var(--accent-hover-color);
 }
 
 
 .client-icon-item:not(:last-child) {
   margin-right: 30px;
 }
+
 /* footer */
 .footer {
   padding: 60px 0;
   background-color: var(--bg-grey-color);
-  
+
 }
 
-.footer-container{
+.footer-container {
   display: flex;
   align-items: baseline;
   padding: 0 15px;
@@ -420,12 +521,36 @@ border: 1px solid var(--accent-hover-color);
   color: var(--white-text-color);
   font-style: normal;
   min-width: 230px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .address-link {
   display: inline-block;
   margin-bottom: 8px;
 }
-.mail{
+
+.mail {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 8px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-contact-mail-link {
+  font-family: Roboto;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 8px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.phone-number {
   font-style: normal;
   font-size: 14px;
   line-height: 1.7;
@@ -434,35 +559,24 @@ border: 1px solid var(--accent-hover-color);
   margin-bottom: 8px;
 }
 
-.footer-contact-mail-link{
-  font-family: Roboto;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  margin-bottom: 8px;
-}
-.phone-number {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  margin-bottom: 8px;}
 .phone-number {
   margin-bottom: 0px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .address-list {
   display: block;
 }
+
 .address-list,
 .mail {
   align-content: space-around;
 }
+
 a.logo.link {
   display: block;
 }
+
 .logo-footer {
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -473,12 +587,15 @@ a.logo.link {
   display: block;
   margin-bottom: 20px;
 }
+
 .logo-white-color {
   color: var(--white-text-color);
 }
+
 .address:hover {
   color: var(--accent-hover-color);
 }
+
 .mail:hover {
   color: var(--accent-hover-color);
 }
@@ -486,35 +603,41 @@ a.logo.link {
 .phone-number:hover {
   color: var(--accent-hover-color);
 }
+
 .address:focus {
   color: var(--accent-hover-color);
 }
+
 .footer-contact-mail-link:hover,
-.footer-contact-mail-link:focus{
+.footer-contact-mail-link:focus {
   color: var(--accent-hover-color);
 }
+
 .mail:focus {
   color: var(--accent-hover-color);
 }
+
 .phone-number:focus {
   color: var(--accent-hover-color);
 }
-.footer-social{
- margin-left: 70px;
+
+.footer-social {
+  margin-left: 70px;
 }
-.footer-social-title{
+
+.footer-social-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color:var(--white-text-color);
-  
-  margin-bottom:  20px;
+  color: var(--white-text-color);
+
+  margin-bottom: 20px;
 }
 
 
-.footer-social-icon-link{
+.footer-social-icon-link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -522,21 +645,186 @@ a.logo.link {
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
-.footer-social-icon{
+
+.footer-social-icon {
   color: var(--white-text-color);
 }
 
-.footer-social-icon-link{
+.footer-social-icon-link {
   fill: currentColor;
 }
 
 
 .footer-social-icon-link:hover,
 .footer-social-icon-link:focus {
- 
+
   background-color: var(--accent-hover-color)
+}
+
+/* END FOOTER */
+/* MODAL window */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms linear,
+    visibility 250ms linear;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 580px;
+  background-color: #fff;
+  padding: 40px;
+
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+
+}
+
+.contact-form-field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.contact-form-input-wrapper {
+  position: relative;
+  display: block;
+  margin-top: 6px;
+}
+
+.contact-form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  transition: border-color 250ms linear;
+}
+
+.contact-form-input:focus {
+  outline: none;
+  border-color: var(--accent-hover-color);
+  fill: var(--accent-hover-color);
+}
+
+.contact-form-main-title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+}
+
+.contact-form-title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+  color: var(--text-color);
+
+}
+
+.user-name-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  color: currentColor;
+  transition: border-color 250ms linear;
+}
+
+.contact-form-input:focus+.user-name-icon {
+  border-color: var(--accent-hover-color);
+  fill: var(--accent-hover-color);
+}
+
+.contact-form {
+  display: block;
+  margin-bottom: 4px;
+}
+
+.contact-form-message {
+  width: 100%;
+  height: 100%;
+  padding: 12px 16px;
+  resize: none;
+  order: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  transition: border-color 250ms linear;
+}
+
+.contact-form-message:focus {
+  border-color: var(--accent-hover-color);
+  outline: none;
+}
+
+.contact-form-checkbox-label {
+  display: flex;
+  align-items: center;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+
+}
+
+.contact-form-checkbox:focus+.contact-form-checkbox-label::before {
+  outline: 1px solid blue;
+}
+
+.contact-form-checkbox:checked+.contact-form-checkbox-label::before {
+
+  background-image: url(/images/icon\ check.svg);
+}
+
+.contact-form-checkbox-label::before {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #212121;
+  content: "";
+  cursor: pointer;
+  margin-right: 8px;
 }
 
 /* PORTFOLIO */
@@ -548,6 +836,7 @@ a.logo.link {
   margin-left: auto;
   margin-bottom: 50px;
 }
+
 .portfolio-list-btn {
   font-size: 16px;
   line-height: 1.6;
@@ -560,6 +849,7 @@ a.logo.link {
   font-size: 16px;
   line-height: 1.6px;
 }
+
 .filter-btn {
   font-family: Roboto;
   font-style: normal;
@@ -572,21 +862,25 @@ a.logo.link {
   border-width: 0;
   padding: 6px 22px;
   cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .portfolio-list-btn:not(:last-child) {
   margin-right: 8px;
 }
-.active-filter-btn{
-color: var(--white-text-color);
-background-color: var(--accent-hover-color);
+
+.active-filter-btn {
+  color: var(--white-text-color);
+  background-color: var(--accent-hover-color);
 }
+
 .filter-btn:hover,
 .filter-btn:focus {
   color: var(--white-text-color);
   background-color: var(--accent-hover-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-  0px 1px 2px rgba(0, 0, 0, 0.08),
-  0px 2px 2px rgba(0, 0, 0, 0.12);
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 
@@ -605,32 +899,25 @@ background-color: var(--accent-hover-color);
   margin-top: 0;
   padding-left: 0;
 }
+
 .menu-portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
 .portfolio-list-item {
   display: block;
   width: 370px;
   margin-bottom: 30px;
 
 }
-.portfolio-link-img
-{
+
+.portfolio-link-img {
   display: block;
   position: relative;
-}
-.portfolio-link-img:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-link-img:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 .portfolio-overlay {
   position: relative;
   overflow: hidden;
@@ -653,13 +940,27 @@ background-color: var(--accent-hover-color);
   padding: 64px 24px;
   overflow: auto;
   transform: translateY(100%);
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .portfolio-link-img:hover .overlay,
 .portfolio-link-img:focus .overlay {
   transform: translate(0%);
 
 }
+
+.portfolio-link-img:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-link-img:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-list-title {
   font-weight: bold;
   font-size: 18px;
@@ -671,6 +972,7 @@ background-color: var(--accent-hover-color);
   flex-wrap: wrap;
   margin-bottom: 4px;
 }
+
 .portfolio-list-text {
   font-size: 16px;
   line-height: 1.9;
@@ -678,17 +980,19 @@ background-color: var(--accent-hover-color);
   color: var(--text-color);
   background-color: #ffffff;
 }
+
 .portfolio-list-container {
   border-left: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
   padding: 20px 24px;
-  
+
 }
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
 }
+
 .portfolio-list-item:not(:nth-child(3n)) {
   margin-right: 30px;
   background-color: white;
@@ -697,8 +1001,7 @@ background-color: var(--accent-hover-color);
 .portfolio-list-item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
-.menu-portfolio-title,
-.description-title {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
